       Thomas Iguchi (#449).
     - Fixed a bug where only project without a URI was allowed in the
       registry. Thanks to Conding-Brunna for the report (#450).
     - Clarified the role of project URIs for uniqueness: They don't allow
       multiple projects with the same name, but do prevent the deployment of
       a project with the same name but different URI.

0.9999 2019-02-01T15:29:40Z
     [Bug Fixes]
     - Fixed a test failure with the MySQL max limit value, mostly exhibited
       on BSD platforms.
     - Removed fallback in the PostgreSQL engine on the `$PGUSER` and
       `$PGPASSWORD` environnement variables, as well as the system username,
       since libpq does all that automatically, and collects data from other
       sources that we did not (e.g., the password and connection service
       files). Thanks to Tom Bloor for the report (issue #410).
     - Changed dependency validation to prevent an error when a change required
       from a different project has been reworked. Previously, when requiring a
       change such as `foo:greeble`, Sqitch would raise an error if
       `foo:greeble` was reworked, suggesting that the dependency be
       tag-qualified to eliminate ambiguity. Now reworked dependencies may be
       required without tag-qualification, though tag-qualification should still
       be specified if functionality as of a particular tag is required.
     - Added a workaround for the shell quoting issue on Windows. Applies to
       IPC::System::Simple 1.29 and lower. See
       [pjf/ipc-system-simple#29](https://github.com/pjf/ipc-system-simple/pull/29)
       for details (#413).
     - Fixed an issue with the MariaDB client where a deploy, revert, or
       verify failure was not properly propagated to Sqitch. Sqitch now passes
       `--abort-source-on-error` to the Maria `mysql` client to ensure that
       SQL errors cause the client to abort with an error so that Sqitch can