@@ -33,7 +33,6 @@ sub new {
         $p{requires}{'Win32::Locale'} = 0;
         $p{requires}{'Win32::ShellQuote'} = 0;
         $p{requires}{'DateTime::TimeZone::Local::Win32'} = 0;
-        $p{build_requires}{'Config::GitLike'} = '1.15';
     }
     if (eval { require Hash::Merge; 1 } && $Hash::Merge::VERSION eq '0.298') {
         warn join "\n", (
