@@ -17,4 +17,8 @@
     from      = gamma
     tags_only = true
     dest_dir  = _build/sql
-
+[foo "BAR"]
+	baz = hello
+[guess "Yes.No"]
+	red = true
+	Calico = false
